# uTTA

./: .gitignore  README.md
040_LabVIEW_GUI/: uTTA_LV_GUI.aliases  uTTA_LV_GUI.lvlps  uTTA_LV_GUI.lvproj
050_Phyton_Scripts/: 20240604_CALIBRATION.tdms  20240604_Calibration.uTTA_CAL  uTTA_FFT_Deconvolution.py  uTTA_Postprocess_Measurement.py  uTTA_Zth_CurveComparison.py
050_Phyton_Scripts/uTTA/: 20240604_Calibration.uTTA_CAL  Install_for_dummies.bat  Mouse_Crosshair_Blitted.py  Sunrise.py  blittedsnappycursor.py  pyproject.toml  requirements.txt  uTTA_CreateDummyMeasurement.py  uTTA_Deconvolution_LucyRichardson.py  uTTA_Deconvolution_LucyRichardson_file.py  uTTA_FFT_Deconvolution.py  uTTA_FFT_Deconvolution_LucyRichardson.py  uTTA_FFT_Deconvolution_Padded.py  uTTA_Postprocess_Calibration.py  uTTA_Postprocess_Calibration_GUI.py  uTTA_Postprocess_Calibration_GUI.pyw  uTTA_Postprocess_Calibration_GUI_v2.py  uTTA_Postprocess_Measurement.py  uTTA_Postprocess_Measurement_GUI.ini  uTTA_Postprocess_Measurement_GUI.pyw  uTTA_Postprocess_Measurement_Interpol_Widget.py  uTTA_Postprocess_Measurement_Widgets.py  uTTA_Zth_Comparison_GUI.pyw  uTTA_Zth_CurveComparison.py  uTTA_data_export.py  uTTA_data_import.py  uTTA_data_processing.py  uTTA_umf_Viewer.py  uTTA_umf_Viewer_GUI.py  uTTA_umf_Viewer_GUI.pyw
050_Phyton_Scripts/uTTA/Report_Templates/: Master_Template.html
050_Phyton_Scripts/uTTA/widgets/: animated_sidebar.py  modern_nav_sidebar.py
060_Example_Measurement_Data/: A2001.t3i  A2001.t3r  A2002.t3r  A2004.t3r  A3001.t3i  A3001.umf  A3001_DiodeVoltages.txt  A3002.umf  (+9 more)
(+249 files in other folders)
